face login db entegrasyon

--- a/Panel/user/login.html
+++ b/Panel/user/login.html
@@ -52,8 +52,8 @@
 
     <script type="text/javascript">
         async function getUser() {
-            let user = await eel.faceRecognition()();
-            alert(user);
+            const user = await eel.faceRecognition()();
+            console.log(user)
         }
     </script>
 
