async login implemented

--- a/Panel/admin/dashboard.html
+++ b/Panel/admin/dashboard.html
@@ -74,7 +74,7 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="javascript:void(0)" class="nav-link">
                                 <i class="nav-icon fa fa-user"></i>
                                 <p>
                                     Users
@@ -83,7 +83,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="javascript:void(0)" class="nav-link">
                                 <i class="nav-icon fa fa-lock"></i>
                                 <p>
                                     Entries
@@ -92,7 +92,16 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="javascript:void(0)" class="nav-link">
+                                <i class="nav-icon fa fa-tasks"></i>
+                                <p>
+                                    Roles
+                                    <span class="right badge badge-danger">New</span>
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="javascript:void(0)" class="nav-link">
                                 <i class="nav-icon fa fa-cog"></i>
                                 <p>
                                     Settings
@@ -101,7 +110,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="javascript:void(0)" class="nav-link">
                                 <i class="nav-icon fa fa-sign-out-alt"></i>
                                 <p>
                                     Sign out
